--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href=" {{ url_for('films') }}">Мои фильмы</a>
+                  <a class="nav-link active" href=" {{ url_for('films', list_num=1) }}">Мои фильмы</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href=" {{ url_for('add_film') }}">Добавить</a>
