--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fontello.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style1.css') }}">
-     <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
@@ -37,29 +37,26 @@
               </ul>
             {% else %}
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-                <li class="ava-item">
-                  <a class="nav-link active" aria-current="page"
-                     href="{{ url_for('user_profile', id=current_user.id) }}"> Ваш профиль:
-                  </a>
-                </li>
                 <li class="nav-item">
+                    <div>
                   <a class="nav-link active" aria-current="page"
-                     href="{{ url_for('user_profile', id=current_user.id) }}">
-                      <div class="position-relative rounded-circle overflow-hidden custom-circle-image-small" >
+                     href="{{ url_for('user_profile', id=current_user.id) }}" > <span class="align-top">Ваш профиль:</span>
+                      <div class="position-relative rounded-circle overflow-hidden custom-circle-image-small align-middle"  >
                         <img class="w-100 h-100" src="{{ url_for('userava') }}" alt="avatar" >
                       </div>
                   </a>
+                        </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href=" {{ url_for('films', list_num=1) }}">Мои фильмы</a>
+                  <a class="nav-link active" href=" {{ url_for('my_films', list_num=1) }}">Мои фильмы</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href=" {{ url_for('add_film') }}">Добавить</a>
                 </li>
-              </ul>
                 <li class="nav-item">
-                    <a class="btn btn-danger" href="{{ url_for('logout') }}" role="button">Выйти</a>
+                    <a class="btn btn-danger position-relative m-0" href="{{ url_for('logout') }}" role="button">Выйти</a>
                 </li>
+              </ul>
 
               </ul>
             {% endif %}
@@ -76,6 +73,16 @@
 {% block content %}
 
 {% endblock %}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function(){
+        $('[class="d-inline-block myPopover"]').popover({
+            content: '<p>Нажмите <span class="badge bg-success">Изменить</span> чтобы добавить ссылку для просмотра.</p>',
+            html: true
+        });
+    });
+  </script>
+
 </body>
