--- a/templates/film_update.html
+++ b/templates/film_update.html
@@ -8,20 +8,7 @@
                 <div class="mb-3">
                     <form action="" class="reg-form", method="post" enctype="multipart/form-data">
                         {{ form.csrf_token() }}
-                        <div class="simple-rating">
-            <div class="simple-rating-items">
-                <input id="simple-rating-5" type="radio" class="simple-rating-item" name="simple-rating" value="5">
-                <label for="simple-rating-5" class="simple-rating-label"></label>
-                <input id="simple-rating-4" type="radio" class="simple-rating-item" name="simple-rating" value="4">
-                <label for="simple-rating-4" class="simple-rating-label"></label>
-                <input id="simple-rating-3" type="radio" class="simple-rating-item" name="simple-rating" value="3">
-                <label for="simple-rating-3" class="simple-rating-label"></label>
-                <input id="simple-rating-2" type="radio" class="simple-rating-item" name="simple-rating" value="2">
-                <label for="simple-rating-2" class="simple-rating-label"></label>
-                <input id="simple-rating-1" type="radio" class="simple-rating-item" name="simple-rating" value="1">
-                <label for="simple-rating-1" class="simple-rating-label"></label>
-            </div>
-        </div>
+                        <h3>Изменение фильма</h3>
                         <p>{{ form.film_name(value=film.film_name) }}</p>
                         <p>{{ form.year(value=film.year) }}</p>
                         <p>{{ form.descript() }}</p>
