--- a/static_dir/css/style1.css
+++ b/static_dir/css/style1.css
@@ -110,3 +110,99 @@ margin-right: 15px;}
 .custom-circle-image-small img {
   object-fit: cover;
 }
+
+.tratata {
+font-size: 80px;
+color: green;
+}
+
+.simple-rating {
+    position: relative;
+    font-size: 40px;
+    display: inline-block;
+}
+
+.simple-rating::before {
+    content: "★★★★★★★★★★";
+    display: block;
+}
+
+.simple-rating-items {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left:0;
+    display: flex;
+    flex-direction: row-reverse;
+    overflow: hidden;
+}
+
+.simple-rating-item {
+    position: absolute;
+    width: 0%;
+    height: 0%;
+    opacity: 0%;
+    visibility: hidden;
+    top: 0;
+    left 0;
+}
+
+.simple-rating-label {
+    flex: 0 0 10%;
+    height: 100%;
+    cursor: pointer;
+    color: #000;
+}
+
+.simple-rating-label::before {
+    content: "★";
+    display: block;
+    transition: color 03.s ease 0s;
+}
+
+.simple-rating-item:checked,
+.simple-rating-item:checked ~ .simple-rating-label {
+    color: #FFB300;
+}
+
+.simple-rating-label:hover,
+.simple-rating-label:hover ~ .simple-rating-label,
+.simple-rating-label:checked ~ .simple-rating-label:hover {
+    color: #FFB300;
+}
+
+.star-rating{
+ font-size: 0;
+}
+.star-rating__wrap{
+ display: inline-block;
+ font-size: 1rem;
+}
+.star-rating__wrap:after{
+ content: "";
+ display: table;
+ clear: both;
+}
+.star-rating__ico{
+ float: right;
+ padding-left: 2px;
+ cursor: pointer;
+ color: #FFB300;
+}
+.star-rating__ico:last-child{
+ padding-left: 0;
+}
+.star-rating__input{
+ display: none;
+}
+.star-rating__ico:hover:before,
+.star-rating__ico:hover ~ .star-rating__ico:before,
+.star-rating__input:checked ~ .star-rating__ico:before
+{
+ content: "\f005";
+}
+
+
+
+
