--- a/static_dir/css/style1.css
+++ b/static_dir/css/style1.css
@@ -63,7 +63,7 @@ padding-right:15px;
 margin-top: 10px;
 }
 
-.icon-profile:
+.icon-profile
 {
 width: 20px;
 height: 20px;}
@@ -145,7 +145,7 @@ color: green;
     opacity: 0%;
     visibility: hidden;
     top: 0;
-    left 0;
+    left: 0;
 }
 
 .simple-rating-label {
@@ -158,7 +158,7 @@ color: green;
 .simple-rating-label::before {
     content: "★";
     display: block;
-    transition: color 03.s ease 0s;
+    transition: color 0.3s ease 0s;
 }
 
 .simple-rating-item:checked,
